--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "LL1",
+      "request": "launch",
+      "mainClass": "LL1",
+      "projectName": "DSA_b2122d8c"
+    },
+    {
+      "type": "java",
       "name": "SubsequenceReturn",
       "request": "launch",
       "mainClass": "SubsequenceReturn",
